--- a/tecnico.html
+++ b/tecnico.html
@@ -19,9 +19,9 @@
         <a href="senna.html">Ver mais</a>
       </div>
     </div><br><br>
-    <div class="button-container"
-    <a href="projetos.html">Ver mais</a>
-  </div>
+    <div class="button-container">
+    <a href="projetos.html">Voltar</a>
+    </div>
 
   <script src="script.js"></script>
 </body>
