--- a/senna.html
+++ b/senna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>1° tri</h2>
+        <h2>Modelagem de Sistemas</h2>
         <hr>
         <!-- Card 1 -->
         <div class="card">
@@ -18,7 +18,7 @@
     </iframe>
             </div>
             <div class="card-content">
-                <h2 class="card-title">Título do Card 1</h2>
+                <h2 class="card-title">Planilha de Regras de negócio da S.A </h2>
                 <p class="card-description">Descrição do primeiro card. Pode colocar aqui qualquer informação que desejar.</p>
             </div>
         </div>
@@ -31,7 +31,7 @@
     </iframe>
             </div>
             <div class="card-content">
-                <h2 class="card-title">Título do Card 2</h2>
+                <h2 class="card-title">Warifreme Da S.A</h2>
                 <p class="card-description">Descrição do segundo card. Pode colocar aqui qualquer informação que desejar.</p>
             </div>
         </div>
@@ -44,7 +44,7 @@
             </iframe>
             </div>
             <div class="card-content">
-                <h2 class="card-title">Título do Card 3</h2>
+                <h2 class="card-title">Sala de Aula invertida</h2>
                 <p class="card-description">Descrição do terceiro card. Pode colocar aqui qualquer informação que desejar.</p>
             </div>
         </div>
